Update VirtualThreadUtils.java
修改